--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,7 @@ htpc_user_group: htpc
 htpc_user_shell: /bin/bash
 htpc_user_ssh_service: yes
 htpc_user_sudo_access: yes
+htpc_create_media_folders: yes
 htpc_media_path: /mnt/media
 htpc_media_movies: movies
 htpc_media_tv: tv
