Cleanup variable names and update documentation

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,13 +5,14 @@ htpc_user_username: htpc
 htpc_user_password: htpc
 htpc_user_group: htpc
 htpc_user_shell: /bin/bash
-htpc_user_ssh_service: yes
 htpc_user_sudo_access: yes
+htpc_ssh_service: yes
 htpc_create_media_folders: yes
+htpc_zeroconf: yes
 htpc_media_path: /mnt/media
 htpc_media_movies: movies
 htpc_media_tv: tv
 htpc_media_music: music
 htpc_media_pictures: pictures
-htpc_media_downloads: downloads
-htpc_zeroconf: yes
+htpc_downloads_complete: "{{ htpc_media_path }}/downloads/complete"
+htpc_downloads_incomplete: "{{ htpc_media_path }}/downloads/incomplete"
