--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 ---
 language: python
 python: "2.7"
+sudo: required
+dist: trusty
 
 # Use the new container infrastructure
-sudo: false
+# sudo: false
 
 # Install ansible
 addons:
