--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
 
 script:
   # Basic role syntax check
-  - ansible-playbook -c local tests/test.yml -i tests/inventory
+  - sudo ansible-playbook -c local tests/test.yml -i tests/inventory
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
