lpadmin and sambashare groups do not exist on Ubuntu 14.04 server. Reduce the number of groups for htpc_user_username to adm,cdrom,dip,plugdev

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,7 +33,7 @@
       state=present 
       createhome=yes 
       shell={{ htpc_user_shell }} 
-      groups=adm,cdrom,dip,plugdev,lpadmin,sambashare
+      groups=adm,cdrom,dip,plugdev
       append=yes
     register: htpc_user_verify_user
 
